# gemini-claude-code-mcp

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: PREGRESS.md  TOOLS.md
gemini_claude_code_mcp/: main.py
gemini_claude_code_mcp/config/: __init__.py  settings.py
gemini_claude_code_mcp/mcp_server/: server.py
gemini_claude_code_mcp/models/: __init__.py  context.py
gemini_claude_code_mcp/services/: __init__.py  file_collector.py  gemini.py  large_context_analyzer.py
gemini_claude_code_mcp/tools/: code_explain_tool.py  summarize_project_tool.py
gemini_claude_code_mcp/utils/: __init__.py  chunking.py  logging.py
gemini_claude_code_mpc/mcp_server/: server.py
tests/integration/: test_summarize_project_tool.py
tests/integration/__snapshots__/: test_summarize_project_tool.ambr
